fix(java): tolerate null NAT metadata
AI-Tool: Codex Desktop
AI-Model: gpt-5.6-sol
AI-Reasoning: xhigh